--- a/MatchServer/MatchServer.csproj
+++ b/MatchServer/MatchServer.csproj
@@ -50,8 +50,10 @@
     <Compile Include="Core\Log.cs" />
     <Compile Include="Core\Program.cs" />
     <Compile Include="Core\Structures.cs" />
+    <Compile Include="Manager\ChannelMgr.cs" />
     <Compile Include="Network\TCPServer.cs" />
     <Compile Include="Packet\HandlerDelegate.cs" />
+    <Compile Include="Packet\Handle\Channel.cs" />
     <Compile Include="Packet\Handle\Match.cs" />
     <Compile Include="Packet\PacketCrypt.cs" />
     <Compile Include="Packet\PacketMgr.cs" />
